--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,5 +1,5 @@
 <h1>about page</h1>
 <h2>百合は非常に繊細て曖昧。ゆえに何が地雷かはその人次第…<br/>
-できる限り癖を細かく区分けしてありますが、「もっと癖ジャンルを追加してほしい！」という場合は<br/>
+できる限り癖(へき)を細かく区分けしてありますが、「もっと癖ジャンルを追加してほしい！」という場合は<br/>
 以下にご意見をお願いします。
 </h2>
