--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,1 +1,14 @@
-<h1>ユーザー情報編集</h1>
+<h1>ユーザー情報編集ページ</h1>
+<h4>登録名</h4>
+<h4>フリガナ</h4>
+<h4>メアド</h4>
+<h4>電話番号</h4>
+<h4>プロフィール画像</h4>
+
+<h4>
+  <%= f.submit "変更を保存" %>
+</h4>
+
+<h4>
+  <%= link_to "退会する" %>
+</h4>
