--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,1 +1,4 @@
-<H1>管理者トップ画面</H1>
+<h11>管理者トップ画面</h1>
+<%= link_to "ユーザー一覧へ", public_users_path %></br>
+<%= link_to "投稿一覧へ", public_books_path %></br>
+
