--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,7 +1,9 @@
+<thead>L-Gardening</thead>
+
 <h1>〜百合共有サイトへYOUKOSO〜</h1>
 <h2>百合好きによる百合作品への愛を叫ぶサイト</h2>
 <%= link_to "投稿一覧へ", public_books_path %>
 
-<h4>フッター</h4>
+<tfoot>フッター<tfoot>
 <h5>管理者ログイン</h5>
 <%= link_to "管理者ログイン", admin_root_path %>
