--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,37 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery-raty-js@2.8.0/lib/jquery.raty.min.js"></script>
   </head>
 
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav ml-auto">
+    <% if user_signed_in? %>
+      <li class="nav-item">
+        <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link text-dark' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "About", about_path, class: 'nav-link text-dark' %>
+      </li>
+      <% if current_user.email != 'guest@example.com' %>
+        <li class="nav-item">
+          <%= link_to '投稿フォーム', new_public_book_path, class: 'nav-link text-dark' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to '投稿一覧', public_books_path, class: 'nav-link text-dark' %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'マイページ', public_user_path(current_user), class: 'nav-link text-dark' %>
+        </li>
+      <% end %>
+    <% else %>
+      <li class="nav-item">
+        <%= link_to "新規登録", new_user_registration_path, class: 'nav-link text-dark' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to "会員ログイン", user_session_path, class: 'nav-link text-dark' %>
+      </li>
+    <% end %>
+    </ul>
+  </div>
+
   <body>
     <%= yield %>
   </body>
