--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,4 +46,10 @@
   <body>
     <%= yield %>
   </body>
+
+<tfoot>フッター
+  <h5>管理者ログイン</h5>
+    <%= link_to "管理者ログイン", admin_root_path %>
+</tfoot>
+
 </html>
